--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,12 @@ python:
 install: "pip install -r requirements.txt"
 # command to run tests
 script: python setup.py test
+
+deploy:
+  provider: pypi
+  user: boverton
+  password:
+    secure: Zro/W364prk9sU0Dn89QiyhSYMWIJzWTIqmDglXKC9goLAjIIT9plQDAfMvgbL8C2tXXnB92wsuXTjs2zcbSEaZyprClQHQnV/X8s8f2ktuGTyiD3SzDpK2Fss5NQOy3gftmVFh2I8AuO1EMHm6nOyLURnz7jLjVNqfpiMP5QZY=
+  on:
+    tags: true
+    repo: GoblinLedger/wowapi
